--- a/projeto-crud-php/tela-login/style.css
+++ b/projeto-crud-php/tela-login/style.css
@@ -1,7 +1,18 @@
 body{font-family: Arial, Helvetica, sans-serif;
 background-image: linear-gradient(45deg, #7B68EE, #3CB371);
 }
-div{
+img{
+    width: 10%;
+    top:0%;
+    position: absolute;
+
+}
+.topo{
+      
+      position: absolute;
+      left: 38%;
+    }
+.Login{
     background-color: rgba(0, 0, 0, 0.9);
     position: absolute;
     top: 50%;
