--- a/projeto-crud-php/Tela-Formulario/Tela-FormularioCss.css
+++ b/projeto-crud-php/Tela-Formulario/Tela-FormularioCss.css
@@ -21,38 +21,41 @@ body{
     }
 
 .box{
-    
     color: white;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-color: rgba(0, 0, 0, 0.7);
+    top: 45%;
+    left: 38%;
     padding: 15px;
     border-radius: 15px;
     width: 20%;
 
     
 }
-fieldset{
-    border: 3px solid rgb(142, 173, 204);
+.p1{
+    position: absolute;
+    top: 73%;
+    right: 48%;
+    border: 3px solid gray;
+    background-color: rgba(0, 0, 0, 0.7);
 
 }
-legend{border: 1px solid dodgerblue ;
+.p2{top: 99%;
+    position: absolute;
+    left: 50%;
+    border: 3px solid gray;
+    background-color: rgba(0, 0, 0, 0.7);
+
+}
+legend{border: 1px solid gray ;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 8px;
 }
 .inputBox{
     position: relative;
-    
-    
-
-    
-
 }
 .inputUser {
-    background: none;
+    background:none;
     border: none;
     outline: none;
     border-bottom:1px solid white ;
@@ -73,17 +76,19 @@ legend{border: 1px solid dodgerblue ;
 .inputUser:valid ~ .labelInput{
     top: -20px;
     font-size: 12px;
-    color: dodgerblue;
+    color: white;
 }
     #data_nascimento{
+        background-color: gray;
         border: none;
         padding: 8px;
         border-radius: 10px;
         outline: none;
         font-size: 15px;
+        color: white;
     }
     #submit{
-        background-image: linear-gradient(to right,rgb(0, 92, 197), rgb(90, 20, 220));
+        background-image: linear-gradient(to right,gray, #1C1C1C);
         width: 100%;
         border: none;
         padding: 15px;
@@ -93,5 +98,5 @@ legend{border: 1px solid dodgerblue ;
         border-radius: 10px;
     }
     #submit:hover{
-        background-image: linear-gradient(to right,rgb(0, 80, 172), rgb(80, 19, 195));
+        background-image: linear-gradient(to right,black, #1C1C1C);
     }
