--- a/projeto-crud-php/Tela-Formulario/Tela-FormularioCss.css
+++ b/projeto-crud-php/Tela-Formulario/Tela-FormularioCss.css
@@ -33,16 +33,18 @@ body{
 }
 .p1{
     position: absolute;
-    top: 73%;
+    top: 10%;
     right: 48%;
-    border: 3px solid gray;
+    border: 0.5px solid gray;
+    border-right: none;
     background-color: rgba(0, 0, 0, 0.7);
 
 }
-.p2{top: 99%;
+.p2{top: 73%;
     position: absolute;
-    left: 50%;
-    border: 3px solid gray;
+    left: 51%;
+    border: 0.5px solid gray;
+    border-left: none;
     background-color: rgba(0, 0, 0, 0.7);
 
 }
@@ -91,9 +93,9 @@ legend{border: 1px solid gray ;
         background-image: linear-gradient(to right,gray, #1C1C1C);
         width: 100%;
         border: none;
-        padding: 15px;
+        padding: 17px;
         color: white;
-        font-size: 15px;
+        font-size: 19px;
         cursor: pointer;
         border-radius: 10px;
     }
