sistema em operação, carece apenas de algumas funcionalidades

--- a/projeto-crud-php/Tela-Formulario/Formulario.css
+++ b/projeto-crud-php/Tela-Formulario/Formulario.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(hospital.png);
+    background-image: url(../imagens/hospital.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom center;
