--- a/projeto-crud-php/tela-login/style.css
+++ b/projeto-crud-php/tela-login/style.css
@@ -1,5 +1,5 @@
 body{  font-family: Arial, Helvetica, sans-serif;
-    background-image: url(hospital.png);
+    background-image: url(../imagens/hospital.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom center;
