--- a/projeto-crud-php/telaInicial/style.css
+++ b/projeto-crud-php/telaInicial/style.css
@@ -13,7 +13,7 @@
     padding: 10px
 }
     body{  font-family: Arial, Helvetica, sans-serif;
-        background-image: url(hospital.png);
+        background-image: url(../imagens/hospital.png);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: bottom center;
@@ -25,7 +25,8 @@
     }
 
 
-.h{ background-image: linear-gradient(45deg, gray, black);
+.h{ 
+    background-image: linear-gradient(45deg, gray, black);
     position:absolute;
     top: 50%;
     width: 20%;
