--- a/Tela-Formulario/Formulario.css
+++ b/Tela-Formulario/Formulario.css
@@ -102,3 +102,15 @@ legend{border: 1px solid gray ;
     #submit:hover{
         background-image: linear-gradient(to right,black, #1C1C1C);
     }
+
+    #update{
+        background-image: linear-gradient(to right,gray, #1C1C1C);
+        width: 100%;
+        border: none;
+        padding: 17px;
+        color: white;
+        font-size: 19px;
+        cursor: pointer;
+        border-radius: 10px;
+    }
+    
