--- a/tela-login/style.css
+++ b/tela-login/style.css
@@ -12,8 +12,9 @@ body{  font-family: Arial, Helvetica, sans-serif;
 .logo{
     
     position: absolute;
-    width: 47%;
-    left: 25%;
+    width: 40vw;
+  height: 40vh; 
+    left: 28vw;
     background-color: rgba(0, 0, 0, 0.2);
     border: black;
     padding: 10px
@@ -21,9 +22,8 @@ body{  font-family: Arial, Helvetica, sans-serif;
     .Login{
         background-color: rgba(0, 0, 0, 0.7);
         position: absolute;
-        top: 68%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top: 44vh;
+        left: 35vw;
         padding: 80px;
         border-radius: 15px;
         color: white;
